[package]
name = "crawler"
version = "0.0.1"
authors = ["doberan <doberankei@gmail.com>"]
documentation = "https://docs.rs/crawler"
description = "web site crawling library"
publish = true
keywords = ["crawler"]
categories = ["web-programming"]
lisence = "MIT"
readme = "README.md"

[dependencies.reqwest]
version = "0.9.20"

[dependencies.robotparser]
version = "0.10.2"

[dependencies.scraper]
version = "0.10.1"